<resources>
    <string name="app_name">MID Mobile test</string>
    <string name="award">AWARD</string>
    <string name="awards">Awards</string>
    <string name="login_welcome_msg">Enter your email address\nto sign in and continue</string>
    <string name="signin">Sign In</string>
    <string name="email">Email Address</string>
    <string name="filter">Filter</string>

    <string name="drawer_open" translatable="false">Open drawer</string>
    <string name="drawer_close" translatable="false">Close drawer</string>
    <string name="awards_menu">Awards Menu</string>

    <string name="title_home">Home</string>
    <string name="wrong_email">Email not registered</string>

</resources>
